SERVER-37941 De-duplicate resolved addresses